Fix nav overflow

--- a/apps/light/src/clients/bodyshop/landingpage/christmas/styles/main.scss
+++ b/apps/light/src/clients/bodyshop/landingpage/christmas/styles/main.scss
@@ -154,7 +154,7 @@ body {
                     a {
                         color: #666666;
                         font-size: 15px;
-                        padding: 0px 15.9px !important;
+                        padding: 0px 15px !important;
                         &:hover {
                             text-decoration: none;
                             color: $tbs-red-color;
